--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-hello world
-
-<div class="bg-slate-600">hello world 2</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
