finish CRUD category

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<a routerLink="/categories/" mat-stroked-button>Category</a>
+<a routerLink="/items/" mat-stroked-button>Item</a>
