add loading spinner + datatable (not finish)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="mx-8">
+<main class="mx-8 pt-8">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
