--- a/src/app/shared-components/datatable/datatable.component.html
+++ b/src/app/shared-components/datatable/datatable.component.html
@@ -1,1 +1,111 @@
-<p>datatable works!</p>
+<div
+  class="relative mat-elevation-z8 flex flex-col justify-between min-h-[100px] mt-5"
+>
+  <table
+    *ngIf="dataSource && dataSource.length > 0; else loadingOrError"
+    mat-table
+    [dataSource]="data"
+    class="w-full"
+  >
+    <ng-container
+      *ngFor="let column of columns"
+      [matColumnDef]="column.columnDef"
+    >
+      <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+
+      <!-- Order Number -->
+      <ng-container *ngIf="column.columnDef === '#'">
+        <td mat-cell *matCellDef="let row; let i = index">
+          {{ i | orderNumber: paginatorRef.pageIndex:paginatorRef.pageSize }}
+        </td>
+      </ng-container>
+
+      <!-- Line Clamp -->
+      <ng-container
+        *ngIf="['content'].indexOf(column.columnDef) >= 0; else normalColumn"
+      >
+        <td mat-cell *matCellDef="let row" class="max-w-xs">
+          <div class="pr-3 line-clamp-1">
+            {{ column.cell(row) }}
+          </div>
+        </td>
+      </ng-container>
+
+      <!-- Normal Column -->
+      <ng-template #normalColumn>
+        <td mat-cell *matCellDef="let row">{{ column.cell(row) }}</td>
+      </ng-template>
+    </ng-container>
+
+    <ng-container *ngIf="actions.length > 0" matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let row">
+        <ng-container *ngFor="let action of actions" [ngSwitch]="action">
+          <button
+            *ngSwitchCase="actionType.EDIT"
+            type="button"
+            mat-icon-button
+            (click)="actionTriggered(actionType.EDIT, row._id)"
+          >
+            <mat-icon
+              matTooltip="Edit Row"
+              aria-hidden="false"
+              aria-label="Edit row"
+              >edit</mat-icon
+            >
+          </button>
+          <button
+            *ngSwitchCase="actionType.DELETE"
+            type="button"
+            mat-icon-button
+            (click)="actionTriggered(actionType.DELETE, row)"
+          >
+            <mat-icon
+              matTooltip="Delete Row"
+              aria-hidden="false"
+              aria-label="Delete row"
+              >delete</mat-icon
+            >
+          </button>
+          <button
+            *ngSwitchCase="actionType.VIEW"
+            type="button"
+            mat-icon-button
+            (click)="actionTriggered(actionType.VIEW, row)"
+          >
+            <mat-icon
+              matTooltip="View Row"
+              aria-hidden="false"
+              aria-label="View row"
+              >visibility</mat-icon
+            >
+          </button>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <ng-template #loadingOrError>
+    <div
+      *ngIf="dataSource && dataSource.length === 0; else loading"
+      class="pt-5 text-center"
+    >
+      No data
+    </div>
+    <ng-template #loading>
+      <app-loading-spinner></app-loading-spinner>
+    </ng-template>
+  </ng-template>
+
+  <mat-paginator
+    #paginatorRef
+    [pageSizeOptions]="[5, 10, 20]"
+    [pageSize]="10"
+    [length]="totalItems"
+    showFirstLastButtons
+    (page)="pageChange($event)"
+  ></mat-paginator>
+</div>
