--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,1 +1,27 @@
-<p>categories works!</p>
+<h2>News Category | Home > News Category</h2>
+<div *ngIf="categories$ | async as categories">
+  <div class="flex mb-5">
+    <button type="button" color="primary" mat-raised-button>
+      Add New Category
+    </button>
+
+    <div class="flex-auto"></div>
+
+    <input
+      matInput
+      [(ngModel)]="filter.q"
+      (ngModelChange)="onSearch()"
+      placeholder="Search"
+    />
+  </div>
+
+  <app-datatable
+    [columns]="columns"
+    [totalItems]="totalItems"
+    [dataSource]="categories"
+    [displayedColumns]="displayedColumn"
+    [actions]="[actionType.EDIT, actionType.DELETE]"
+    (onActionTriggered)="onActionTriggered($event)"
+    (onPaginationChange)="onPaginationChange($event)"
+  ></app-datatable>
+</div>
