--- a/src/app/shared-components/datatable/datatable.component.html
+++ b/src/app/shared-components/datatable/datatable.component.html
@@ -1,9 +1,10 @@
 <div
-  class="relative mat-elevation-z8 flex flex-col justify-between min-h-[100px] mt-5"
+  class="relative mat-elevation-z8 flex flex-col justify-between min-h-[100px]"
 >
   <table
     *ngIf="dataSource && dataSource.length > 0; else loadingOrError"
     mat-table
+    matSort
     [dataSource]="data"
     class="w-full"
   >
@@ -11,7 +12,17 @@
       *ngFor="let column of columns"
       [matColumnDef]="column.columnDef"
     >
-      <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+      <ng-container *ngIf="column.isSortable; else normalHeader">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ column.header }}
+        </th>
+      </ng-container>
+
+      <ng-template #normalHeader>
+        <th mat-header-cell *matHeaderCellDef>
+          {{ column.header }}
+        </th>
+      </ng-template>
 
       <!-- Order Number -->
       <ng-container *ngIf="column.columnDef === '#'">
@@ -31,6 +42,18 @@
         </td>
       </ng-container>
 
+      <!-- Time -->
+      <ng-container
+        *ngIf="
+          ['createAt', 'created_at'].indexOf(column.columnDef) >= 0;
+          else normalColumn
+        "
+      >
+        <td mat-cell *matCellDef="let row">
+          {{ column.cell(row) | date: "dd/MM/yyyy" }}
+        </td>
+      </ng-container>
+
       <!-- Normal Column -->
       <ng-template #normalColumn>
         <td mat-cell *matCellDef="let row">{{ column.cell(row) }}</td>
@@ -47,10 +70,7 @@
             mat-icon-button
             (click)="actionTriggered(actionType.EDIT, row._id)"
           >
-            <mat-icon
-              matTooltip="Edit Row"
-              aria-hidden="false"
-              aria-label="Edit row"
+            <mat-icon matTooltip="Edit" aria-hidden="false" aria-label="Edit"
               >edit</mat-icon
             >
           </button>
@@ -61,9 +81,9 @@
             (click)="actionTriggered(actionType.DELETE, row)"
           >
             <mat-icon
-              matTooltip="Delete Row"
+              matTooltip="Delete"
               aria-hidden="false"
-              aria-label="Delete row"
+              aria-label="Delete"
               >delete</mat-icon
             >
           </button>
