--- a/src/app/shared-components/datatable/datatable.component.html
+++ b/src/app/shared-components/datatable/datatable.component.html
@@ -68,7 +68,7 @@
             *ngSwitchCase="actionType.EDIT"
             type="button"
             mat-icon-button
-            (click)="actionTriggered(actionType.EDIT, row._id)"
+            (click)="actionTriggered(actionType.EDIT, row.id)"
           >
             <mat-icon matTooltip="Edit" aria-hidden="false" aria-label="Edit"
               >edit</mat-icon
