finish list item + create item

--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -30,5 +30,6 @@
     [actions]="[actionType.EDIT, actionType.DELETE]"
     (onActionTriggered)="onActionTriggered($event)"
     (onPaginationChange)="onPaginationChange($event)"
+    (onSortChange)="onSortChange($event)"
   ></app-datatable>
 </div>
