--- a/src/app/pages/categories/add-category-dialog/add-category-dialog.component.html
+++ b/src/app/pages/categories/add-category-dialog/add-category-dialog.component.html
@@ -5,7 +5,9 @@
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Category Title</mat-label>
       <input formControlName="title" matInput placeholder="title" />
-      <mat-error *ngIf="form.controls['title']">Errors have occured</mat-error>
+      <mat-error *ngIf="form.controls['title']"
+        >This field cannot be blank!</mat-error
+      >
     </mat-form-field>
   </div>
 
