--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,4 +1,5 @@
-<h2>News Category | Home > News Category</h2>
+<!-- <h2>News | Home > News</h2> -->
+<app-breadcrumb [breadcrumbItems]="breadcrumbItems"></app-breadcrumb>
 <div>
   <div class="flex">
     <div class="my-auto">
