--- a/src/app/pages/items/items.component.html
+++ b/src/app/pages/items/items.component.html
@@ -1,4 +1,5 @@
-<h2>News | Home > News</h2>
+<!-- <h2>News | Home > News</h2> -->
+<app-breadcrumb [breadcrumbItems]="breadcrumbItems"></app-breadcrumb>
 <div>
   <div class="flex">
     <div class="my-auto">
@@ -9,13 +10,13 @@
         mat-raised-button
         (click)="onActionTriggered({ type: actionType.CREATE, payload: null })"
       >
-        Add New News
+        Add New Item
       </button>
     </div>
 
     <div class="flex-auto"></div>
 
-    <div>
+    <div class="space-x-3">
       <!-- Status -->
       <mat-form-field appearance="outline">
         <mat-label>Status</mat-label>
