--- a/src/app/layout/footer/about-dialog/about-dialog.component.html
+++ b/src/app/layout/footer/about-dialog/about-dialog.component.html
@@ -1,36 +1,29 @@
-<h2 mat-dialog-title class="">What is this website used for?</h2>
+<h2 mat-dialog-title class="">News Management Demo App</h2>
 <mat-dialog-content>
-  <p>The author of this application often encounters errors related to:</p>
-  <ul class="list-disc list-inside mb-2">
-    <li>Consistency in the code</li>
-    <li>Non-functional error</li>
-    <li>Naming Convention</li>
-    <li>etc.</li>
-  </ul>
-  <p>
-    This is also a place to note tips, personal standards of what "good" code is
-    like.
-  </p>
-  <p>
-    Comparing code with this list before committing code can be considered a way
-    of self-checking the quality of your code, thereby allowing coders to focus
-    more on thinking logically without having to worry too much about minor bugs
-    in the code.
-  </p>
-  <p>
-    UI and ideas inspired by
-    <a
-      class="custom-normal-link"
-      href="https://angular-checklist.io/projects"
-      target="_blank"
-      rel="noopener noreferrer"
-      >Angular Checklist</a
-    >.
-  </p>
-  <p>Developed by Tran Duc Phuong.</p>
+  <h3>Purpose of the project</h3>
+  <p>This is a demo app for the News Management System.</p>
 
-  <!-- <p>
-        This website is used to help you to keep track of your daily tasks.
-        You can add tasks, mark them as done, and delete them.
-    </p> -->
+  <p>
+    In this project, the words "items" and "news" are considered equal.
+    Developers can use these two words interchangeably.
+  </p>
+
+  <h3>Main function</h3>
+  <ul class="mb-2 list-disc list-inside">
+    <li>List, Create, Update, Delete News (Items)</li>
+    <li>List, Create, Update, Delete News Category</li>
+    <li>Search, Sort, Filter Items by Status</li>
+    <li>Search, Sort Categories</li>
+  </ul>
+
+  <h3>Technical Stack</h3>
+  <ul class="mb-2 list-disc list-inside">
+    <li>FE Frameword: Angular</li>
+    <li>UI Libraries: Tailwind, Material Angular</li>
+    <li>Mockup Server: json-server</li>
+    <li>RTE: TinyMCE</li>
+  </ul>
+
+  <h3>Credit</h3>
+  <p>Developed by Tran Duc Phuong.</p>
 </mat-dialog-content>
