--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="py-8 mx-24">
+<main class="py-8 mx-8 md:mx-16 lg:mx-24">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
