--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,7 @@
-<div class="flex justify-between px-5 py-2 text-white bg-black">
-  <div class="flex gap-x-2">
+<div
+  class="flex flex-col justify-between px-5 py-2 text-white bg-black md:flex-row"
+>
+  <div class="flex justify-center mb-2 md:justify-start gap-x-2 md:mb-0">
     <a
       href="https://github.com/tdp1999/news-management"
       target="_blank"
@@ -30,5 +32,7 @@
     </button>
   </div>
 
-  <div class="text-right">Made by Tran Duc Phuong. All rights reserved.</div>
+  <div class="text-center md:text-right">
+    Made by Tran Duc Phuong. All rights reserved.
+  </div>
 </div>
