--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar>
+<mat-toolbar class="justify-center md:justify-start">
   <a routerLink="/"><h1>News Management</h1></a>
 </mat-toolbar>
