--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,7 +1,7 @@
 <!-- <h2>News | Home > News</h2> -->
 <app-breadcrumb [breadcrumbItems]="breadcrumbItems"></app-breadcrumb>
 <div>
-  <div class="flex">
+  <div class="flex flex-col mt-3 space-y-2 md:flex-row md:space-x-0 md:mt-0">
     <div class="my-auto">
       <button
         title="Add category"
