--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center w-full h-full m-0">
-  <h1>Wellcome to My News Management</h1>
+  <h1 class="text-center">Wellcome to My News Management</h1>
   <p>This is a simple CRUD app.</p>
   <div class="flex space-x-3">
     <a routerLink="/categories/" mat-stroked-button>Categories</a>
